ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: <your domain>
    http:
      paths:
      - backend:
          service:
            name: jellyfin-svc
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
